--- a/Copy of LuxorBLL/.project
+++ b/Copy of LuxorBLL/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Copy of LuxorBLL</name>
+	<name>v3 of LuxorBLL</name>
 	<comment></comment>
 	<projects>
 	</projects>
